<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIHealthAdviceActivity">


    <ScrollView
        android:id='@+id/scrollView'
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="391dp"
                android:layout_height="270dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/obesityimage" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="What does your BMI say about your health?"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="380dp"
                android:layout_height="203dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/description_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="What to do if your BMI is really low?"
                android:textSize="15sp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <ImageView
                android:id="@+id/imageview1"
                android:layout_width="360dp"
                android:layout_height="181dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/lowbmiimages" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/lowbmiadvice_txt"
                android:textSize="15sp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Some healthy ways to gain weight:"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Eat more frequently"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/healthywaystogain_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Choose nutrient-rich foods"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/healthywaystogainn_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />


            <TextView
                android:id="@+id/textView16"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Make every bite count"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/healthywaystogainnn_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="What to do if your BMI is really high?"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <ImageView
                android:id="@+id/imageview2"
                android:layout_width="360dp"
                android:layout_height="181dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/highbmiimages" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/reducebmi_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Type 2 diabetes, Coronary heart disease, Cancer, Stroke"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Some ways to reduce weight:"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Calorie deficit"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/reducebmii_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Fruit and vegetables"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/reducebmiii_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Ditch highly processed foods "
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/reducebmiiii_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView333"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Lean Meat "
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/reducebmiiiii_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />


            <TextView
                android:id="@+id/textView35"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="Health Advice"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="391dp"
                android:layout_height="270dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/headache" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="What causes poor nutrition? "
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/poornutrition_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="How does poor nutrition affect us? "
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/poornu_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="359dp"
                android:layout_height="22dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="How to prevent getting those disease? "
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:text="@string/poornuu_txt"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.229" />







        </LinearLayout>

    </ScrollView>

</RelativeLayout>